--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
         <header>API Basejump: <em>Image Search Abstraction Layer</em></header><br>
         <article>
         <p>User stories:</p>
-          <p class="user">1) I can get the image URLs, alt text and page urls for a set of images relating to a given search string.<br> 2) I can paginate through the responses by adding a '<em>?offset=2</em>' parameter to the URL.<br> 3) I can get a list of the most recently submitted search strings.</p>
+          <p class="user">1) I can get the image URLs, alt text and page urls for a set of images relating to a given search string.<br> 2) I can paginate through the responses by adding <em>?offset=2</em>, parameter to the URL.<br> 3) I can get a list of the most recently submitted search strings.</p>
         </article>
           <footer>
           <p class="example">
