--- a/views/index.html
+++ b/views/index.html
@@ -21,14 +21,19 @@
           <p class="example">
             Example creation usage:
           </p>
-            <p><mark>https://imaginary-bank.glitch.me/search/[your search term]</mark></p>
+            <p><mark>https://imaginary-bank.glitch.me/search/</mark> + [your search term]</p>
             <p><mark>https://imaginary-bank.glitch.me/search/</mark> + [your search term] + <mark>?offset=</mark> + [a number to paginate]</p>
             <p><mark>https://imaginary-bank.glitch.me/search/history</mark></p>
+          <p class="example">
+            Example creation usage:
+          </p>
+          <p><mark>
+            https://imaginary-bank.glitch.me/search/presidents?offset=10</mark></p>
           <p class="example">
             Example creation output:
           </p>
           <p><mark>
-            https://imaginary-bank.glitch.me/search/presidents</mark></p>
+            https://imaginary-bank.glitch.me/search/presidents?offset=10</mark></p>
             </footer>
       </div>
    </body>
