--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
             <p><mark>https://imaginary-bank.glitch.me/search/</mark> + [your search term] + <mark>?offset=</mark> + [a number to paginate]</p>
             <p><mark>https://imaginary-bank.glitch.me/search/history</mark></p>
           <p class="example">
-            Example creation usage:
+            Example search usage:
           </p>
           <p><mark>
             https://imaginary-bank.glitch.me/search/presidents?offset=10</mark></p>
