👓😋 Checkpoint views/index.html:553280

--- a/views/index.html
+++ b/views/index.html
@@ -23,17 +23,16 @@
           </p>
             <p><mark>https://imaginary-bank.glitch.me/search/</mark> + [your search term]</p>
             <p><mark>https://imaginary-bank.glitch.me/search/</mark> + [your search term] + <mark>?offset=</mark> + [a number to paginate]</p>
-            <p><mark>https://imaginary-bank.glitch.me/search/history</mark></p>
+            
           <p class="example">
             Example search usage:
           </p>
           <p><mark>
             https://imaginary-bank.glitch.me/search/presidents?offset=10</mark></p>
           <p class="example">
-            Example creation output:
+            View search history:
           </p>
-          <p><mark>
-            https://imaginary-bank.glitch.me/search/presidents?offset=10</mark></p>
+          <p><mark>https://imaginary-bank.glitch.me/search/history</mark></p>
             </footer>
       </div>
    </body>
