--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,10 @@
           </p>
           <p><mark>
             https://imaginary-bank.glitch.me/search/presidents?offset=10</mark></p>
-            
+          <p class="example">
+            Example output:
+          </p>
+          <p><mark>{"image_url": "https://www.somewebsite.com/random</mark></p>            
           <p class="example">
             View search history:
           </p>
