--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,7 @@
           <p class="example">
             Example output:
           </p>
-          <p><mark>{"image_url": "https://www.somewebsite.com/random</mark></p>            
+          <p><mark>{"image_title": "some random image", "image_url": "https://www.somewebsite.com/randomimage.jpg"}</mark></p>            
           <p class="example">
             View search history:
           </p>
