☺️🐺 Checkpoint views/index.html:553280

--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
           <p class="example">
             View search history:
           </p>
-          <p><mark>https://imaginary-bank.glitch.me/search/history</mark></p>
+          <p><mark>https://imaginary-bank.glitch.me/history</mark></p>
             </footer>
       </div>
    </body>
