🚪😾 Checkpoint views/index.html:553280

--- a/views/index.html
+++ b/views/index.html
@@ -21,8 +21,8 @@
           <p class="example">
             Example creation usage:
           </p>
-            <p><mark>https://imaginary-bank.glitch.me/search/</mark> + [your search term]</p>
-            <p><mark>https://imaginary-bank.glitch.me/search/</mark> + [your search term] + <mark>?offset=</mark> + [a number to paginate]</p>           
+            <p><mark>https://imaginary-bank.glitch.me/search/</mark>[+ your search term]</p>
+            <p><mark>https://imaginary-bank.glitch.me/search/</mark>[+ your search term + ]<mark>?offset=</mark> + a number to paginate</p>           
           <p class="example">
             Example search usage:
           </p>
