--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
             Example creation usage:
           </p>
             <p><mark>https://imaginary-bank.glitch.me/search/</mark>[your search term]</p>
-            <p><mark>https://imaginary-bank.glitch.me/search/</mark>[your search term + ]<mark>?offset=</mark>[a number to paginate]</p>           
+            <p><mark>https://imaginary-bank.glitch.me/search/</mark>[your search term]<mark>?offset=</mark>[a number to paginate]</p>           
           <p class="example">
             Example search usage:
           </p>
