👶😂 Checkpoint public/client.js:553280/3 views/index.html:553280/1

--- a/views/index.html
+++ b/views/index.html
@@ -38,5 +38,6 @@
           <p><mark>https://imaginary-bank.glitch.me/history</mark></p>
             </footer>
       </div>
+      <script src="/client.js"></script>
    </body>
 </html>
