--- a/views/postsearch.html
+++ b/views/postsearch.html
@@ -11,7 +11,7 @@
    </head>   
    <body>
       <div class="container">
-        <header>API Basejump: <em>Image Search Abstraction Layer</em></header><br>
+        <header>ABC Basejump: <em>Image Search Abstraction Layer</em></header><br>
         <article>
         <p>User stories:</p>
           <p class="user">1) I can get the image URLs, alt text and page urls for a set of images relating to a given search string.<br> 2) I can paginate through the responses by adding, <em><mark>?offset=2</mark>
@@ -38,5 +38,7 @@
           <p><mark>https://imaginary-bank.glitch.me/history</mark></p>
             </footer>
       </div>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="/client.js"></script>
    </body>
 </html>
