🎓💅 Checkpoint public/client.js:553280/40 views/history.html:553280/66

--- a/views/history.html
+++ b/views/history.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang = "en"> 
    <head>
@@ -18,6 +20,7 @@
             </em>, parameter to the end of the URL.<br> 3) I can get a list of the most recently submitted search strings.</p>
         </article>-->
           <footer>
+            <section id="history"></section>
           <p class="example">
             Example creation usage:
           </p>
