🍛🎨 Checkpoint server.js:553280/122 public/client.js:553280/11 public/style.css:553280/46 views/history.html:553280/1

--- a/views/history.html
+++ b/views/history.html
@@ -14,7 +14,7 @@
    <body>
       <div class="container">
         <header>API Basejump: <em>Search History</em></header><br>
-         <section id="history"></section>
+         <article id="history"></article>
         <!--<article>
         <p>User stories:</p>
           <p class="user">1) I can get the image URLs, alt text and page urls for a set of images relating to a given search string.<br> 2) I can paginate through the responses by adding, <em><mark>?offset=2</mark>
