⏳⏲ Checkpoint server.js:553280/55 java.js:553280/125 views/history.html:553280/12 public/client.js:553280/45 views/index.html:553280/1

--- a/views/history.html
+++ b/views/history.html
@@ -41,6 +41,6 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
              integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
             crossorigin="anonymous"></script>
-      <script src="./java.js"></script>
+      <script src="/client.js"></script>
    </body>
 </html>
