🐒🙋 Checkpoint public/client.js:553280/129 views/index.html:553280/1

--- a/views/index.html
+++ b/views/index.html
@@ -37,9 +37,7 @@
           <p><mark>https://imaginary-bank.glitch.me/history</mark></p>
             </footer>
       </div>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
-             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
-            crossorigin="anonymous"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="/client.js"></script>
    </body>
 </html>
