--- a/views/history.html
+++ b/views/history.html
@@ -9,13 +9,13 @@
    </head>   
    <body>
       <div class="container">
-        <header>API Basejump: <em>Search History</em></header><br>
-         <article id="history"></article>
-        <!--<article>
+        <header>API Basejump: <em>Image Search Abstraction Layer</em></header><br>
+         <!--<article id="history"></article>-->
+                <article>
         <p>User stories:</p>
           <p class="user">1) I can get the image URLs, alt text and page urls for a set of images relating to a given search string.<br> 2) I can paginate through the responses by adding, <em><mark>?offset=2</mark>
             </em>, parameter to the end of the URL.<br> 3) I can get a list of the most recently submitted search strings.</p>
-        </article>-->
+        </article>
           <footer>
     
           <p class="example">
@@ -38,9 +38,8 @@
           <p><mark>https://imaginary-bank.glitch.me/history</mark></p>
             </footer>
       </div>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
-             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
-            crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" 
+             crossorigin="anonymous"></script>
       <script src="/client.js"></script>
    </body>
 </html>
