🕰🎐 Checkpoint server.js:553280/18 views/index.html:553280/21 views/history.html:553280/17 public/client.js:553280/7

--- a/views/history.html
+++ b/views/history.html
@@ -9,7 +9,7 @@
    </head>   
    <body>
       <div class="container">
-        <header>API Basejump: <em>Image Search Abstraction Layer</em></header><br>
+        <header>API Basejump: <em>Image Search Abstraction Layer(history)</em></header><br>
          <!--<article id="history"></article>-->
                 <article>
         <p>User stories:</p>
@@ -40,6 +40,6 @@
       </div>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" 
              crossorigin="anonymous"></script>
-      <script src="/client.js"></script>
+      <script src="public/client.js"></script>
    </body>
 </html>
