🚀😾 Checkpoint views/index.html:553280/274 server.js:553280/2 public/style.css:553280/70

--- a/views/index.html
+++ b/views/index.html
@@ -13,8 +13,8 @@
         <header>API Basejump: <em>Image Search Abstraction Layer</em></header><br>
         <article>
         <p>User stories:</p>
-          <p class="user">1) I can get the image URLs, alt text and page urls for a set of images relating to a given search string.<br> 2) I can paginate through the responses by adding the parameter, <em><mark>?offset=2</mark>
-            </em> to the end of the URL.<br> 3) I can get a list of the most recently submitted search strings.</p>
+          <p class="user">1) I can get the image URLs, alt text and page urls for a set of images relating to a given search string.<br> 2) OPTIONAL: I can paginate through the responses by adding the parameter, <em><mark>?offset=2</mark>
+            </em> to the end of the URL.<br><span class="indent">(default: offset=0)</span><br> 3) I can get a list of the most recently submitted search strings.</p>
         </article>
           <footer>
           <p class="example">
@@ -30,7 +30,7 @@
           <p class="example">
             Example output:
           </p>
-            <p><mark>{ "image_title": "some random image", "image_url": <a href="">https://www.somewebsite.com/randomimage.jpg"</a> }</mark></p>            
+            <p><mark>{"Title":"Corolla Wild Horses Gallery | Corolla Wild Horses | Corolla Wild ...", "PageURL":"https://www.corollawildhorses.com/wp-content/gallery/corolla-wild-horses/horses-02.jpg", "Image":{"contextLink":"https://www.corollawildhorses.com/corolla-wild-horses-gallery/","height":480,"width":640,"byteSize":151877,"thumbnailLink":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSO9kA3eenHM6xJjsrk3eSpnN2w2nqRJ2nWU0PU7bTz4gMygVDJQ4qmAja5","thumbnailHeight":103,"thumbnailWidth":137}...</mark></p>            
           <p class="example">
             View search history:
           </p>
