🏎🍗 Checkpoint server.js:553280/4 views/index.html:553280/977

--- a/views/index.html
+++ b/views/index.html
@@ -25,14 +25,12 @@
           <p class="example">
             Example Search Usage:
           </p>
-            <p><mark>         
-            https://imaginary-bank.glitch.me/search/horses</mark></p>
-          <p><mark>       
-            https://imaginary-bank.glitch.me/search/presidents?offset=6</mark></p>
+            <p><mark>https://imaginary-bank.glitch.me/search/horses</mark></p>
+          <p><mark>https://imaginary-bank.glitch.me/search/presidents?offset=6</mark></p>
           <p class="example">
             Example Output:
           </p>
-            <p><mark>{"Title":"Corolla Wild Horses Gallery | Corolla Wild Horses | Corolla Wild ...", "PageURL":"https://www.corollawildhorses.com/wp-content/gallery/corolla-wild-horses/horses-02.jpg", "Image":{"contextLink":"https://www.corollawildhorses.com/corolla-wild-horses-gallery/","height":480,"width":640,"byteSize":151877,"thumbnailLink":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSO9kA3eenHM6xJjsrk3eSpnN2w2nqRJ2nWU0PU7bTz4gMygVDJQ4qmAja5","thumbnailHeight":103,"thumbnailWidth":137}...</mark></p>            
+            <p><mark>{ "Title" : "Corolla Wild Horses Gallery | Corolla Wild Horses | Corolla Wild ...", "PageURL" : "https://www.corollawildhorses.com/wp-content/gallery/corolla-wild-horses/horses-02.jpg", "Image": { "contextLink" : "https://www.corollawildhorses.com/corolla-wild-horses-gallery/", "height" : 480, "width" : 640, "byteSize" : 151877, "thumbnailLink" : "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSO9kA3eenHM6xJjsrk3eSpnN2w2nqRJ2nWU0PU7bTz4gMygVDJQ4qmAja5","thumbnailHeight":103,"thumbnailWidth":137 }...</mark></p>            
           <p class="example">
             View Search History:
           </p>
