--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
         <p>User Stories:</p>
           <p class="user">
             1) I can get the image URLs, alt text and page URLs for a set of images relating to a given search string.<br>
-            2) Optional: I can paginate through the responses by adding the parameter, <em><mark>?offset=2</mark></em> to the end of the URL.<em><sub>(default: offset=0)</sub></em><br>
+            2) Optional: I can paginate through the responses by adding the parameter, <em><mark>?offset=2</mark></em> to the end of the URL.<br>
             3) I can get a list of the most recently submitted search strings.</p>
         </article>
           <footer>
